# ImgCompare

./: .gitignore  CMakeLists.txt  app.rc.in  build.ps1  package-release.ps1
src/: CompareWidget.cpp  CompareWidget.h  ImageLoader.cpp  ImageLoader.h  MainWindow.cpp  MainWindow.h  main.cpp
